# Smart-Files

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  amalgamate.py  script.sh  tlclib.h
apps/: CMakeLists.txt  dlread.c  nspprint.c  simple_nspprint.c  test.c  walfprint.c
include/: nsdb.h  (+4 more)
lib/: CMakeLists.txt  compile_config.h  compile_config.h.in  errors.h  pager.h  variable.h
lib/algorithms/: node_updates.c  node_updates.h  nsdb.h
lib/algorithms/nsdb/rope/: _ns_balance_and_release.c  _ns_insert.c  _ns_read.c  _ns_rebalance.c  _ns_remove.c  _ns_rptree_valid.c  _ns_seek.c  _ns_write.c  algorithms.h
lib/algorithms/smfile/: _smfile_load.c  smfile.c  smfile.h  smfile_begin.c  smfile_close.c  smfile_commit.c  smfile_delete.c  smfile_insert.c  smfile_load.c  smfile_new_context.c  smfile_open.c  smfile_perror.c  smfile_pinsert.c  smfile_pread.c  smfile_premove.c  smfile_psize.c  smfile_pwrite.c  smfile_read.c  smfile_remove.c  smfile_rollback.c  smfile_strerror.c  smfile_write.c
lib/algorithms_internal/: algorithms.h  node_updates.c  node_updates.h  utils.c
lib/algorithms_internal/rope/: _ns_balance_and_release.c  _ns_insert.c  _ns_read.c  _ns_rebalance.c  _ns_remove.c  _ns_rptree_valid.c  _ns_seek.c  _ns_write.c  algorithms.h
lib/algorithms_public/: algorithms.h  ns_begin_txn.c  ns_commit.c  ns_open.c
lib/algorithms_public/nsvar/: nsvar.h  nsvar_close.c  nsvar_crash.c  nsvar_remove.c  nsvar_rollback.c  nsvar_write.c
lib/algorithms_public/rope/: ns_insert.c  ns_read.c
lib/apps/: dlread.c  nspprint.c
lib/aries/: aries.c  aries.h  aries_fuzzy_checkpoint.c  aries_no_checkpoint_crash.c  pgr_apply_redo.c  pgr_apply_undo_update.c  pgr_handle_rollback_update.c  pgr_restart.c  pgr_restart_analysis.c  pgr_restart_redo.c  pgr_restart_undo.c  pgr_rollback.c
lib/core/: alloc.c  alloc.h  assert.h  block_array.c  block_array.h  bounds.h  bstack.h  bytes.h  cbuffer.c  cbuffer.h  checksums.c  checksums.h  chunk_alloc.c  chunk_alloc.h  data_validator.c  data_validator.h  data_writer.h  dbl_buffer.c  dbl_buffer.h  deserializer.c  deserializer.h  error.c  error.h  ext_array.c  ext_array.h  filenames.c  gr_lock.c  gr_lock.h  hash_table.c  hash_table.h  hashing.c  hashing.h  lalloc.c  lalloc.h  latch.c  latch.h  llist.c  llist.h  macros.h  malloc_plan.c  (+23 more)
lib/core/testing/: core_extra_tests.c  robin_hood_ht_tests.c  testing.c
lib/dpgt/: dirty_page_table.c  dirty_page_table.h  dirty_page_table_tests.c  dpgt_concurrency_tests.c
lib/intf/: logging.c  logging.h  os.h
lib/intf/os/: atomic.h  compiler.h  file_system.h  memory.c  memory.h  socket.h  threading.h  time.h
lib/intf/os_posix/: cond.c  file.c  mutex.c  rwlock.c  semaphore.c  socket.c  thread.c  timer.c
lib/intf/os_windows/: cond.c  file.c  mutex.c  rwlock.c  semaphore.c  socket.c  thread.c  timer.c
lib/lockt/: lock_table.c  lock_table.h  lt_lock.c  lt_lock.h
lib/net/: client.c  client.h  echo_server.c  echo_server.h  polling_server.c  polling_server.h
lib/numstore/algorithms_internal/: algorithms.h  node_updates.c  node_updates.h  utils.c
lib/numstore/algorithms_public/: algorithms.h  ns_begin_txn.c  ns_close.c  ns_commit.c  ns_crash.c  ns_open.c  ns_rollback_all.c
lib/os_pager/: file_pager.c  file_pager.h  os_pager.h
lib/pager/: page_fixture.c  page_fixture.h  page_h.h  pager.c  pgr_begin_txn.c  pgr_cancel.c  pgr_checkpoint.c  pgr_close.c  pgr_commit.c  pgr_delete.c  pgr_delete_single_file.c  pgr_deletion_blocking_checkpoint.c  pgr_evict.c  pgr_extend_file.c  pgr_flush.c  pgr_fuzzy_checkpoint.c  pgr_get.c  pgr_launch_checkpoint_thread.c  pgr_make_writable.c  pgr_mt_test.c  pgr_new.c  pgr_open.c  pgr_release.c  pgr_reserve.c
lib/pages/: data_list.c  data_list.h  free_list.h  fsm_page.c  fsm_page.h  inner_node.c  inner_node.h  inner_node_testing.c  inner_node_testing.h  page.c  page.h  page_delegate.h  root_node.c  root_node.h  var_hash_page.c  var_hash_page.h  var_page.c  var_page.h  var_tail.c  var_tail.h
lib/paging/: pager.h
lib/paging/aries/: aries.c  aries.h  aries_fuzzy_checkpoint.c  aries_no_checkpoint_crash.c  pgr_apply_redo.c  pgr_apply_undo_update.c  pgr_handle_rollback_update.c  pgr_restart.c  pgr_restart_analysis.c  pgr_restart_redo.c  pgr_restart_undo.c  pgr_rollback.c
lib/paging/dpgt/: dirty_page_table.c  dirty_page_table.h  dirty_page_table_tests.c  dpgt_concurrency_tests.c
lib/paging/lockt/: lock_table.c  lock_table.h  lt_lock.c  lt_lock.h
lib/paging/os_pager/: file_pager.c  file_pager.h  os_pager.h
lib/paging/pager/: page_fixture.c  page_fixture.h  page_h.h  pager.c  pgr_begin_txn.c  pgr_cancel.c  pgr_checkpoint.c  pgr_close.c  pgr_commit.c  pgr_delete.c  pgr_delete_single_file.c  pgr_evict.c  pgr_extend_file.c  pgr_flush.c  pgr_fuzzy_checkpoint.c  pgr_get.c  pgr_launch_checkpoint_thread.c  pgr_make_writable.c  pgr_mt_test.c  pgr_new.c  pgr_open.c  pgr_release.c  pgr_reserve.c
lib/paging/pages/: data_list.c  data_list.h  free_list.h  fsm_page.c  fsm_page.h  inner_node.c  inner_node.h  inner_node_testing.c  inner_node_testing.h  page.c  page.h  page_delegate.h  root_node.c  root_node.h  var_hash_page.c  var_hash_page.h  var_page.c  var_page.h  var_tail.c  var_tail.h
lib/paging/txns/: txn.c  txn.h  txn_table.c  txn_table.h  txnt_concurrency_tests.c
lib/paging/wal/: os_wal.h  wal.c  wal.h  wal_istream.c  wal_istream.h  wal_ostream.c  wal_ostream.h  wal_rec_hdr.c  wal_rec_hdr.h  wal_tests.c
lib/test/: testing.h
lib/testing/: smfile_data_writer.c  smfile_test_fixture.h
lib/txns/: txn.c  txn.h  txn_table.c  txn_table.h  txnt_concurrency_tests.c
lib/wal/: os_wal.h  wal.c  wal.h  wal_append_log.c  wal_diff.h  wal_istream.c  wal_istream.h  wal_ostream.c  wal_ostream.h  wal_read.c  wal_rec_hdr.c  wal_rec_hdr.h  wal_rec_hdr_decode.c  wal_tests.c  wal_write_locked.c
samples/: CMakeLists.txt
samples/rope/: sample1_simple.c  sample2_complicated.c  sample3_durability.c
samples/smfile/: sample1_basic_crud.c  sample2_transactions.c  sample3_multithreaded.c  sample3_stride.c  sample4_stride.c  sample4_variable_names.c  sample5_rollback_commit.c
(+38 files in other folders)
